Added tqmd package in environment'

--- a/notebooks/0.0_preprocess_data.ipynb
+++ b/notebooks/0.0_preprocess_data.ipynb
@@ -121,13 +121,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "a_idTmq3fDtI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/ultra/lib/python3.7/site-packages/torch/storage.py:34: FutureWarning: pickle support for Storage will be removed in 1.5. Use `torch.save` instead\n",
+      "  warnings.warn(\"pickle support for Storage will be removed in 1.5. Use `torch.save` instead\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#save dataset in order to use it later\n",
     "with open('../data/02_interim/bmodes_steatosis_assessment_IJCARS.pickle', 'wb') as handle:\n",
@@ -136,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -169,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -249,17 +258,6 @@
     "imshow(torchvision.utils.make_grid(my_img_grid.type(torch.int), nrow=5))\n",
     "# print( \"The shape of the images is\", images.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "RL6Ce1RUqPqh"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
