Added notebook for ligistic regression experiments

--- a/notebooks/3.0_model_pca_linear_regression.ipynb
+++ b/notebooks/3.0_model_pca_linear_regression.ipynb
@@ -19,22 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ptO9fUvkD-Lc"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mila/g/gauthies/.conda/envs/ultra/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-      "  and should_run_async(code)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../src')\n",
@@ -44,10 +35,9 @@
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.svm import LinearSVC\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import GroupKFold\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "from itertools import product\n",
     "import pickle\n",
@@ -59,19 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: 'linear_regression_experiment' does not exist. Creating a new experiment\n"
+      "/home/mila/g/gauthies/.conda/envs/ultra/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
      ]
     }
    ],
    "source": [
-    "mlflow.set_experiment('svm_experiment')"
+    "mlflow.set_experiment('logistic_regression_experiment')"
    ]
   },
   {
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,16 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the parameters by cross-validation\n",
-    "param_gamma = [1e-3, 1e-4]\n",
+    "#param_penalty= ['l1', 'l2', 'elasticnet', None]\n",
+    "#param_solver = ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga']\n",
     "param_C = [1, 10, 100, 1000]\n",
-    "rbf_params = list(product(['kernel'],param_gamma, param_C))\n",
-    "linear_params = list(product(['linear'],param_C))\n",
-    "params = rbf_params + linear_params"
+    "params = list(product(['regression'],param_C))"
    ]
   },
   {
@@ -242,14 +232,10 @@
     "                X_train = scaler.fit_transform(X_train)\n",
     "                X_valid = scaler.transform(X_valid)\n",
     "            \n",
-    "            mlflow.log_param('model',f'svm: {param[0]}')\n",
-    "            if param[0] == 'kernel': \n",
-    "                mlflow.log_param('gamma',param[1])\n",
-    "                mlflow.log_param('C',param[2])\n",
-    "                model = SVC(gamma=param[1], C=param[2])\n",
-    "            if param[0] == 'linear': \n",
-    "                model = LinearSVC(C=param[1])\n",
-    "                mlflow.log_param('C',param[1])\n",
+    "            mlflow.log_param('C',param[2])\n",
+    "            \n",
+    "            model =  LogisticRegression()\n",
+    "            #model = SVC(gamma=param[1], C=param[2])\n",
     "            model.fit(X_train, y_train)\n",
     "            predictions = model.predict(X_valid)\n",
     "            acc = accuracy_score(y_valid, predictions)\n",
