Pushed everything because Mila cluster will be unvailable

--- a/notebooks/1.0_extract_features-Copy1.ipynb
+++ b/notebooks/1.0_extract_features-Copy1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -104,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 549/549 [00:24<00:00, 22.17it/s]\n"
+      "100%|██████████| 549/549 [00:21<00:00, 25.61it/s]\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -128,8 +128,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28.1 s, sys: 3.75 s, total: 31.9 s\n",
-      "Wall time: 40.1 s\n"
+      "CPU times: user 49.9 s, sys: 3.71 s, total: 53.6 s\n",
+      "Wall time: 53.3 s\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
     "%%time\n",
     "# This should take about 7 minutes. It processes about 10 images/5sec.\n",
     "# Set the parameters of the scattering transform.\n",
-    "J = 2\n",
+    "J = 3\n",
     "M, N = 434, 636 #( shape of the ultrasound images)\n",
     "\n",
     "use_cuda = torch.cuda.is_available()\n",
@@ -198,6 +198,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scattering_features = scattering_features[:,26:, :, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([550, 25, 54, 79])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scattering_features[:,1:26, :, :].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([550, 191, 54, 79])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scattering_features[:,26:, :, :].shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -209,16 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(550, 1390934)"
+       "(550, 814808)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -247,7 +296,7 @@
     "                'M':M,\n",
     "                'N':N}\n",
     "\n",
-    "with open('../data/03_features/scattering_features_J_2.pickle', 'wb') as handle:\n",
+    "with open('../data/03_features/scattering_features_J_3_second_order.pickle', 'wb') as handle:\n",
     "    pickle.dump(scatter_dict, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
