--- a/notebooks/5.0_model_inception_resnet_v2.ipynb
+++ b/notebooks/5.0_model_inception_resnet_v2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -69,12 +69,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab_type": "text",
     "id": "731ett2LeCqH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mila/g/gauthies/.conda/envs/ultra/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>fat</th>\n",
+       "      <th>fname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>../data/02_interim/raw_images/1/P1_image1.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>../data/02_interim/raw_images/1/P1_image2.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>../data/02_interim/raw_images/1/P1_image3.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>../data/02_interim/raw_images/1/P1_image4.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>../data/02_interim/raw_images/1/P1_image5.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  labels  fat                                          fname\n",
+       "0   1       0    3  ../data/02_interim/raw_images/1/P1_image1.jpg\n",
+       "1   1       0    3  ../data/02_interim/raw_images/1/P1_image2.jpg\n",
+       "2   1       0    3  ../data/02_interim/raw_images/1/P1_image3.jpg\n",
+       "3   1       0    3  ../data/02_interim/raw_images/1/P1_image4.jpg\n",
+       "4   1       0    3  ../data/02_interim/raw_images/1/P1_image5.jpg"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "M, N= 434, 636 # ultrasound image dimension\n",
     "#In the paper, the authors extract the features directly from the pretrained inception resnet_v2\n",
@@ -89,9 +178,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mila/g/gauthies/.conda/envs/ultra/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 550 validated image filenames belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = dataset.astype({\"labels\": str})\n",
     "datagen = ImageDataGenerator(preprocessing_function= tf.keras.applications.inception_resnet_v2.preprocess_input)\n",
@@ -107,14 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 95%|█████████▌| 21/22 [01:11<00:03,  3.39s/it]\n"
+      "/home/mila/g/gauthies/.conda/envs/ultra/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n",
+      " 95%|█████████▌| 21/22 [01:09<00:03,  3.29s/it]\n"
      ]
     }
    ],
@@ -139,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,21 +298,21 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.646589</td>\n",
+       "      <td>0.646588</td>\n",
        "      <td>0.537462</td>\n",
-       "      <td>0.401943</td>\n",
-       "      <td>0.199506</td>\n",
-       "      <td>0.202659</td>\n",
+       "      <td>0.401942</td>\n",
+       "      <td>0.199507</td>\n",
+       "      <td>0.202658</td>\n",
        "      <td>0.294940</td>\n",
-       "      <td>0.500032</td>\n",
+       "      <td>0.500031</td>\n",
        "      <td>0.821503</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.229985</td>\n",
+       "      <td>0.229984</td>\n",
        "      <td>0.633566</td>\n",
        "      <td>0.206114</td>\n",
        "      <td>0.732518</td>\n",
        "      <td>0.654043</td>\n",
-       "      <td>0.275887</td>\n",
+       "      <td>0.275888</td>\n",
        "      <td>0.362820</td>\n",
        "      <td>0.107184</td>\n",
        "      <td>0.501511</td>\n",
@@ -219,8 +326,8 @@
        "      <td>0.374550</td>\n",
        "      <td>0.360310</td>\n",
        "      <td>0.129162</td>\n",
-       "      <td>0.239084</td>\n",
-       "      <td>0.262954</td>\n",
+       "      <td>0.239083</td>\n",
+       "      <td>0.262955</td>\n",
        "      <td>0.478658</td>\n",
        "      <td>0.791732</td>\n",
        "      <td>...</td>\n",
@@ -230,7 +337,7 @@
        "      <td>0.655221</td>\n",
        "      <td>0.580703</td>\n",
        "      <td>0.341523</td>\n",
-       "      <td>0.230005</td>\n",
+       "      <td>0.230004</td>\n",
        "      <td>0.092797</td>\n",
        "      <td>0.491484</td>\n",
        "      <td>0.658840</td>\n",
@@ -240,24 +347,24 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0.693498</td>\n",
-       "      <td>0.392269</td>\n",
-       "      <td>0.309535</td>\n",
+       "      <td>0.392268</td>\n",
+       "      <td>0.309536</td>\n",
        "      <td>0.125567</td>\n",
-       "      <td>0.170291</td>\n",
+       "      <td>0.170290</td>\n",
        "      <td>0.238435</td>\n",
        "      <td>0.447406</td>\n",
-       "      <td>0.975266</td>\n",
+       "      <td>0.975265</td>\n",
        "      <td>...</td>\n",
        "      <td>0.134828</td>\n",
        "      <td>0.366664</td>\n",
        "      <td>0.171025</td>\n",
-       "      <td>0.465991</td>\n",
+       "      <td>0.465990</td>\n",
        "      <td>0.529727</td>\n",
        "      <td>0.310153</td>\n",
        "      <td>0.244650</td>\n",
        "      <td>0.107581</td>\n",
        "      <td>0.403802</td>\n",
-       "      <td>0.578182</td>\n",
+       "      <td>0.578181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -265,9 +372,9 @@
        "      <td>0</td>\n",
        "      <td>0.612398</td>\n",
        "      <td>0.441856</td>\n",
-       "      <td>0.305320</td>\n",
+       "      <td>0.305321</td>\n",
        "      <td>0.126919</td>\n",
-       "      <td>0.219825</td>\n",
+       "      <td>0.219824</td>\n",
        "      <td>0.259561</td>\n",
        "      <td>0.441000</td>\n",
        "      <td>0.850824</td>\n",
@@ -275,13 +382,13 @@
        "      <td>0.268535</td>\n",
        "      <td>0.460096</td>\n",
        "      <td>0.280195</td>\n",
-       "      <td>0.543408</td>\n",
+       "      <td>0.543407</td>\n",
        "      <td>0.608157</td>\n",
        "      <td>0.337704</td>\n",
        "      <td>0.300175</td>\n",
        "      <td>0.188300</td>\n",
-       "      <td>0.455577</td>\n",
-       "      <td>0.640827</td>\n",
+       "      <td>0.455578</td>\n",
+       "      <td>0.640826</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -289,7 +396,7 @@
        "      <td>0</td>\n",
        "      <td>0.555925</td>\n",
        "      <td>0.398252</td>\n",
-       "      <td>0.232700</td>\n",
+       "      <td>0.232699</td>\n",
        "      <td>0.125582</td>\n",
        "      <td>0.220398</td>\n",
        "      <td>0.237641</td>\n",
@@ -304,7 +411,7 @@
        "      <td>0.336688</td>\n",
        "      <td>0.322390</td>\n",
        "      <td>0.077366</td>\n",
-       "      <td>0.416017</td>\n",
+       "      <td>0.416018</td>\n",
        "      <td>0.598994</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -314,30 +421,30 @@
       ],
       "text/plain": [
        "   id  labels         0         1         2         3         4         5  \\\n",
-       "0   1       0  0.646589  0.537462  0.401943  0.199506  0.202659  0.294940   \n",
-       "1   1       0  0.693356  0.374550  0.360310  0.129162  0.239084  0.262954   \n",
-       "2   1       0  0.693498  0.392269  0.309535  0.125567  0.170291  0.238435   \n",
-       "3   1       0  0.612398  0.441856  0.305320  0.126919  0.219825  0.259561   \n",
-       "4   1       0  0.555925  0.398252  0.232700  0.125582  0.220398  0.237641   \n",
+       "0   1       0  0.646588  0.537462  0.401942  0.199507  0.202658  0.294940   \n",
+       "1   1       0  0.693356  0.374550  0.360310  0.129162  0.239083  0.262955   \n",
+       "2   1       0  0.693498  0.392268  0.309536  0.125567  0.170290  0.238435   \n",
+       "3   1       0  0.612398  0.441856  0.305321  0.126919  0.219824  0.259561   \n",
+       "4   1       0  0.555925  0.398252  0.232699  0.125582  0.220398  0.237641   \n",
        "\n",
        "          6         7  ...      1526      1527      1528      1529      1530  \\\n",
-       "0  0.500032  0.821503  ...  0.229985  0.633566  0.206114  0.732518  0.654043   \n",
+       "0  0.500031  0.821503  ...  0.229984  0.633566  0.206114  0.732518  0.654043   \n",
        "1  0.478658  0.791732  ...  0.192122  0.485892  0.299204  0.655221  0.580703   \n",
-       "2  0.447406  0.975266  ...  0.134828  0.366664  0.171025  0.465991  0.529727   \n",
-       "3  0.441000  0.850824  ...  0.268535  0.460096  0.280195  0.543408  0.608157   \n",
+       "2  0.447406  0.975265  ...  0.134828  0.366664  0.171025  0.465990  0.529727   \n",
+       "3  0.441000  0.850824  ...  0.268535  0.460096  0.280195  0.543407  0.608157   \n",
        "4  0.377193  0.840379  ...  0.196321  0.381724  0.252318  0.516770  0.624552   \n",
        "\n",
        "       1531      1532      1533      1534      1535  \n",
-       "0  0.275887  0.362820  0.107184  0.501511  0.489348  \n",
-       "1  0.341523  0.230005  0.092797  0.491484  0.658840  \n",
-       "2  0.310153  0.244650  0.107581  0.403802  0.578182  \n",
-       "3  0.337704  0.300175  0.188300  0.455577  0.640827  \n",
-       "4  0.336688  0.322390  0.077366  0.416017  0.598994  \n",
+       "0  0.275888  0.362820  0.107184  0.501511  0.489348  \n",
+       "1  0.341523  0.230004  0.092797  0.491484  0.658840  \n",
+       "2  0.310153  0.244650  0.107581  0.403802  0.578181  \n",
+       "3  0.337704  0.300175  0.188300  0.455578  0.640826  \n",
+       "4  0.336688  0.322390  0.077366  0.416018  0.598994  \n",
        "\n",
        "[5 rows x 1538 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,9 +458,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mila/g/gauthies/.conda/envs/ultra/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a dict for the scattering features, and parameters\n",
     "inception_dict_tensor = {\n",
